# jet-governance

./: .editorconfig  .eslintrc  .gitignore  .prettierignore  .prettierrc  Anchor.toml  Cargo.toml  README.md  app-setup.sh  package-lock.json  package.json  test.sh  tsconfig.json
.github/: CODEOWNERS
.github/workflows/: devnet.yaml  lint.yaml  test.yaml
app/: .env.sample  .gitignore  .prettierignore  README.md  craco.config.js  package-lock.json  package.json  tsconfig.json
app/public/: index.html
app/public/idl/devnet/: jet_governance.json
app/public/idl/localnet/: .gitignore
app/src/: App.less  App.tsx  DarkTheme.less  ant-custom.less  index.css  index.tsx  jet-antd.less  jet-styles.css  manifest.json  routes.tsx  serviceWorker.ts  wdyr.ts
app/src/actions/: account.ts  addStake.ts  cancelProposal.ts  castVote.ts  claimAndStake.ts  createProposal.ts  createUserAuth.ts  depositGoverningTokens.ts  dryRunInstruction.ts  executeInstruction.ts  executeTransaction.ts  finalizeVote.ts  finalizeVotes.ts  flagInstructionError.ts  insertInstruction.ts  jetFaucet.ts  jetFaucet.tsx  metadata.ts  relinquishVote.ts  removeInstruction.ts  rescindAndUnstake.ts  restake.ts  setRealmAuthority.ts  signOffProposal.ts  voteRecordCsvDownload.ts  withdrawUnbonded.ts
app/src/actions/chat/: postChatMessage.ts  postMessage.ts
app/src/actions/devtools/: createAccount.ts  generateGovernanceArtifacts.ts  (+1 more)
app/src/app/: store.tsx
app/src/components/: AppBar.tsx  ConnectButton.tsx  ConnectModal.tsx  ConnectWalletModal.tsx  CurrentUserBadge.tsx  FooterLinks.less  FooterLinks.tsx  Input.less  Input.tsx  JetInput.tsx  Layout.tsx  Loader.tsx  MobileMessage.tsx  MobilePastProposals.tsx  Nav.less  Nav.tsx  Navbar.less  Navbar.tsx  ProposalCard.tsx  ResultProgressBar.tsx  Settings.tsx  StakeInput.tsx  Stakeholders.tsx  TermsPrivacy.tsx  TokenDisplay.tsx  TokenIcon.tsx  VoterList.tsx  YourInfo.less  YourInfo.tsx  index.tsx
app/src/constants/: index.ts  index.tsx  labels.ts  math.ts
app/src/contexts/: GovernanceContext.tsx  accounts.tsx  airdrop.tsx  blockExplorer.tsx  connectWallet.tsx  connection.tsx  darkTheme.tsx  index.tsx  initModal.tsx  proposal.tsx  rpcNode.tsx  scrollToTop.tsx  transactionLogs.tsx  wallet.tsx
app/src/hooks/: accountHooks.ts  apiHooks.ts  darkTheme.ts  index.ts  proposalHooks.ts  useAccountByMint.ts  useClient.ts  useHasVoteTimeExpired.ts  useIsBeyondTimestamp.ts  useKeyParam.ts  useLoadGist.ts  useRpcContext.ts  useStaking.ts  useUserAccounts.ts  useUserBalance.ts  useUserTotalBalance.ts
app/src/models/: 200Index.ts  GEOBANNED_COUNTRIES.ts  INITIAL_PROPOSALS.ts  PROPOSAL_BLACKLIST.ts  PUBKEYS_INDEX.ts  TOP_STAKEHOLDERS.ts  USER_VOTE_HISTORY.ts  WHITELISTED_ADDRESSES.ts  account.ts  accounts.ts  api.ts  createSetRealmConfig.ts  errors.ts  index.ts  instructions.ts  serialisation.ts  tokenAccount.ts  tokenSwap.ts  withAddSignatory.ts  withApprove.ts  withCastVote.ts  withCreateAccountGovernance.ts  withCreateMintGovernance.ts  withCreateProgramGovernance.ts  withCreateProposal.ts  withCreateRealm.ts  withCreateTokenGovernance.ts  withDepositGoverningTokens.ts  withInsertInstruction.ts  withWithdrawGoverningTokens.ts
app/src/tools/: routeTools.ts  transactions.tsx  units.ts
app/src/types/: buffer-layout.d.ts
app/src/utils/: borsh.ts  errors.ts  eventEmitter.ts  explorer.ts  ids.ts  index.tsx  layout.ts  notifications.tsx  utils.ts
app/src/views/: Airdrop.tsx  AirdropHistory.tsx  Claim.tsx  Faucet.tsx  FlightLog.tsx  FlightLogs.tsx  Glossary.tsx  Home.less  Home.tsx  Proposal.less  Proposal.tsx  Settings.tsx  TermsConditions.tsx  home.tsx  index.tsx  proposal.tsx
client/: Cargo.toml
client/src/: instructions.rs  lib.rs  load.rs  state.rs
common/: package.json
common/src/contexts/: connection.tsx  wallet.tsx
common/src/utils/: utils.ts
programs/auth/: Cargo.toml
programs/auth/src/: events.rs  lib.rs
programs/governance/: Cargo.toml
programs/governance/src/: lib.rs
programs/jet-governance/: Cargo.toml
programs/jet-governance/src/: lib.rs
programs/jet-governance/src/instructions/: cast_vote.rs  change_vote.rs  deposit.rs  deposit_token.rs  edit_draft.rs  edit_proposal.rs  init_proposal.rs  init_realm.rs  init_voter.rs  make_proposal.rs  mod.rs  propose.rs  rescind.rs  rescind_vote.rs  transition_proposal.rs  vote.rs  withdraw.rs  withdraw_token.rs
programs/jet-governance/src/state/: mod.rs  proposal.rs  realm.rs  voter.rs
programs/rewards/: Cargo.toml
programs/rewards/src/: events.rs  instructions.rs  lib.rs  state.rs
programs/rewards/src/instructions/: add_airdrop_recipients.rs  airdrop_add_recipients.rs  airdrop_claim.rs  airdrop_claim_begin.rs  airdrop_claim_complete.rs  airdrop_claim_complete_locked.rs  airdrop_claim_verify.rs  airdrop_close.rs  airdrop_create.rs  airdrop_finalize.rs  award_close.rs  award_create.rs  award_release.rs  award_revoke.rs  claim_airdrop.rs  claim_airdrop_locked.rs  close_airdrop.rs  distribution_close.rs  distribution_create.rs  distribution_release.rs  finalize_airdrop.rs  init_airdrop.rs  init_distribution.rs
programs/rewards/src/state/: airdrop.rs  award.rs  distribution.rs
programs/spl-golf/: Cargo.toml
programs/spl-golf/src/: lib.rs
programs/spl-golf/src/instructions/: mod.rs  relinquish_many.rs  vote_many.rs
programs/staking/: Cargo.toml
programs/staking/src/: events.rs  instructions.rs  lib.rs  spl_addin.rs  state.rs
programs/staking/src/instructions/: add_stake.rs  add_stake_locked.rs  burn_votes.rs  cancel_unbond.rs  close_stake_account.rs  close_vesting_account.rs  init_pool.rs  init_stake_account.rs  mint_votes.rs  unbond_stake.rs  unlock_stake.rs  withdraw_bonded.rs  withdraw_unbonded.rs
programs/vote-batcher/: Cargo.toml
programs/vote-batcher/src/: lib.rs
programs/vote-batcher/src/instructions/: relinquish_many.rs  vote_many.rs
tests/: airdrop-staking.ts  jet-governance.ts  spl-golf.ts  vote-batcher.ts
tests/rust/: Cargo.toml
tests/rust/src/: helper.rs  lib.rs  solana.rs  token.rs
tools/cli/: Cargo.toml  README.md
tools/cli/src/: main.rs  utils.rs
(+146 files in other folders)
