[package]
name = "jet-proto-auth"
version = "0.1.0"
description = "Authentication for wallet addresses"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "jet_auth"
path = "src/lib.rs"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
enforce-authority = []

[dependencies]
anchor-lang = { git = "https://github.com/jet-lab/anchor" }
