[package]
name = "jet-proto-auth"
version = "1.0.0"
description = "Authentication for wallet addresses"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "jet_auth"
path = "src/lib.rs"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
enforce-authority = []
cli = ["no-entrypoint", "serde"]

[dependencies]
anchor-lang = { git = "https://github.com/jet-lab/anchor", branch = "master" }
serde = { version = "1.0", features = ["derive"], optional = true }
