[package]
name = "jet-governance"
version = "0.1.0"
description = "Jet Governance Program"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "jet_governance"
doctest = false

[features]
no-entrypoint = []
no-idl = []
devnet = ["anchor-spl/devnet"]
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { git = "https://github.com/jet-lab/anchor" }
anchor-spl = { git = "https://github.com/jet-lab/anchor" }
solana-program = "1.7"
