[package]
name = "jet-proto-rewards"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "jet_rewards"
path = "src/lib.rs"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { git = "https://github.com/jet-lab/anchor" }
anchor-spl = { git = "https://github.com/jet-lab/anchor" }

bytemuck = "1.7"
bitflags = "1.3"

jet-proto-staking = { path = "../staking", features = ["cpi"] }
jet-proto-proc-macros = "1"
static_assertions = "1"