[package]
name = "jet-proto-rewards"
version = "1.0.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "jet_rewards"
path = "src/lib.rs"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.21.0"
anchor-spl = "0.21.0"

bytemuck = "1.7"
bitflags = "1.3"

jet-proto-staking = { path = "../staking", features = ["cpi"] }
jet-proto-proc-macros = "1"
static_assertions = "1"