[package]
name = "jet-proto-staking"
version = "1.0.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "jet_staking"
path = "src/lib.rs"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { git = "https://github.com/jet-lab/anchor", branch = "master" }
anchor-spl = { git = "https://github.com/jet-lab/anchor", branch = "master" }
solana-program = "1.8"
jet-proto-auth = { path = "../auth", features = ["cpi"] }
spl-governance = { version = "2", features = ["no-entrypoint"] }
spl-governance-tools = "0.1"
