[package]
name = "jet-proto-staking"
version = "1.0.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "jet_staking"
path = "src/lib.rs"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
cli = ["no-entrypoint", "serde"]

[dependencies]
anchor-lang = { git = "https://github.com/jet-lab/anchor", branch = "master" }
anchor-spl = { git = "https://github.com/jet-lab/anchor", branch = "master" }
solana-program = "1.8"
jet-proto-auth = { path = "../auth", features = ["cpi"] }
spl-governance = { git = "https://github.com/jet-lab/solana-program-library", branch = "temp-fix-spl-deps", features = ["no-entrypoint"] }
spl-governance-addin-api = { git = "https://github.com/jet-lab/solana-program-library", branch = "temp-fix-spl-deps" }
spl-governance-tools = { git = "https://github.com/jet-lab/solana-program-library", branch = "temp-fix-spl-deps" }
serde = { version = "1.0", features = ["derive"], optional = true }
