[package]
name = "jet-vote-batcher"
version = "1.0.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "jet_vote_batcher"
path = "src/lib.rs"

[features]
no-entrypoint = []
no-idl = []
testing = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26"
anchor-spl = "0.26"
solana-program = "1.9"
spl-governance = { version = "2", features = ["no-entrypoint"] }
itertools = "0.10.3"
