[package]
name = "integration-tests"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jet-governance-client = { path = "../../client" }
jet-governance = { path = "../../programs/jet-governance", features = ["no-entrypoint"]  }
anchor-client = { path = "../../../jet-anchor/client" }
anyhow = "1.0.32"
spl-token = "3.2.0"


# ???
solana-client = "1.8.0"
solana-sdk = "1.8.0"
solana-account-decoder = "1.8.0"
solana-program = "1.8.0"
spl-associated-token-account = "1.0.3"
shellexpand = "2.1.0"
bs58 = "0.4.0"
borsh = "0.9.1"
rand_core = "0.6.3"
