[package]
name = "rewards-cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anchor-client = { git = "https://github.com/jet-lab/anchor", branch = "master" }
anchor-lang = { git = "https://github.com/jet-lab/anchor", branch = "master" }
anchor-spl = { git = "https://github.com/jet-lab/anchor", branch = "master" }
jet-proto-rewards = { path = "../../programs/rewards", features = ["cpi"] }
jet-proto-staking = { path = "../../programs/staking", features = ["cpi"] }
structopt = "0.3"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pyth-client = "0.2"
solana-account-decoder = "1.7"
solana-transaction-status = "1.7"
shellexpand = "2.1"
