[package]
name = "rewards-cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anchor-client = "0.26"
anchor-lang = "0.26"
anchor-spl = "0.26"
jet-proto-rewards = { path = "../../programs/rewards", features = ["no-entrypoint"] }
jet-proto-staking = { path = "../../programs/staking", features = ["no-entrypoint"] }
structopt = "0.3"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pyth-client = "0.2"
shellexpand = "2.1"
